--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,6 +5,17 @@
     <%- include('partials/userDetails') -%>
   </div>
 
+  <button class="btn">
+    <a href="#">
+      All Recipes
+    </a>
+  </button>
+  <button class="btn">
+    <a href="#">
+      All MealPlans
+    </a>
+  </button>
+
   <div class="flex flex-row flex-wrap gap-6 justify-evenly">
     <% for(let i=0; i<recipes.length; i++) {%>
     <div class="card w-96 bg-base-100 shadow-xl">
