--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,57 @@
 <%- include('partials/header') -%>
 
-<div class="hero min-h-screen bg-base-200">
-    <div class="hero-content flex-col lg:flex-row">
-      <img src="https://unsplash.com/photos/kcA-c3f_3FE" class="max-w-sm rounded-lg shadow-2xl" />
-      <div>
-        <h1 class="text-5xl font-bold">Meal Prep in Minutes</h1>
-        <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
-        <button class="btn btn-primary"><a href="/login"> Login</a></button>
-        <button class="btn btn-primary"><a href="/signup"> Signup</a></button>
-      </div>
+<!-- <div class="hero min-h-screen bg-base-200">
+  <div class="hero-content flex-col lg:flex-row">
+    <div>
+      <p class="text-6xl font-bold leading-loose">
+        Prep Your Meal in Minutes with the click of a
+        <button class="btn btn-primary text-3xl">button</button>
+      </p>
+      <p class="py-6">
+        Take the hassle out of mealplanning. Just input your recipes and go!
+      </p>
+      <button class="btn btn-primary"><a href="/login"> Login</a></button>
+      <button class="btn btn-primary"><a href="/signup"> Signup</a></button>
     </div>
   </div>
+</div> -->
 
+<div
+  class="min-h-screen bg-primary text-primary-content from-primary to-secondary bg-gradient-to-br pt-20 flex flex-col"
+>
+  <div class="mx-16 py-10 text-center">
+    <div class="max-w-full">
+      <h1
+        class="font-title mb-2 text-4xl font-extrabold sm:text-5xl lg:text-7xl"
+      >
+        InstaPrep
+      </h1>
+      <h2 class="font-title text-md sm:text-2xl lg:text-3xl mt-5 mb-5">
+        Prep Your Meal in Minutes with the click of a
+        <button class="btn btn-secondary text-sm">button</button>
+      </h2>
+    </div>
+
+    <h2 class="font-title text-md sm:text-xl lg:text-xl mt-5 mb-5">
+      A place to hold all your recipes
+    </h2>
+    <h2 class="font-title text-md sm:text-xl lg:text-xl mt-5 mb-5">
+      Categorize meals into lunch and dinner
+    </h2>
+    <h2 class="font-title text-md sm:text-xl lg:text-xl mt-5 mb-5">
+      Make a randomized mealplan with your logged recipes
+    </h2>
+    <h2 class="font-title text-md sm:text-xl lg:text-xl mt-5 mb-5">
+      Mealplans take minutes to make
+    </h2>
+
+    <button class="btn btn-primary mt-5 mb-3">
+      <a href="/login"> Login</a>
+    </button>
+    <button class="btn btn-primary mt-5 mb-3">
+      <a href="/signup"> Signup</a>
+    </button>
+  </div>
+</div>
 
 <%- include('partials/footer') -%>
