--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="autumn">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Meal Planner</title>
-    <link href="/css/style.css" rel="stylesheet">
+    <title>InstaPrep</title>
+    <link href="/css/style.css" rel="stylesheet" />
   </head>
-  <body>
-    <div class="navbar bg-primary text-primary-content">
-      <a class="btn btn-ghost normal-case text-xl">InstaPrep</a>
-    </div>
-    
-  </body>
+  <body></body>
 </html>
