--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,39 +1,66 @@
 <%- include('partials/header') -%>
-    <main class="container">
-        <div class="row justify-content-center">
-            <section class="col-6 mt-5">
-                <% if (locals.messages.errors) { %>
-                    <% messages.errors.forEach( el => { %>
-                        <div class="alert alert-danger"><%= el.msg %></div>
-                    <% }) %>    
-                <% } %>
-                <% if (locals.messages.info) { %>
-                    <% messages.info.forEach( el => { %>
-                        <div class="alert alert-info"><%= el.msg %></div>
-                    <% }) %>    
-                <% } %>
-                <form action="/signup" method="POST">
-                    <div class="mb-3">
-                        <label for="userName" class="form-label">User Name</label>
-                        <input type="text" class="form-control" id="userName" name="userName">
-                      </div>
-                    <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
-                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                    </div>
-                    <div class="mb-3">
-                      <label for="password" class="form-label">Password</label>
-                      <input type="password" class="form-control" id="password" name="password">
-                    </div>
-                    <div class="mb-3">
-                        <label for="confirmPassword" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" id="confirmPassword" name="confirmPassword">
-                      </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
-            </section>
+
+<section class="col-6 mt-5">
+  <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+  <div class="alert alert-danger"><%= el.msg %></div>
+  <% }) %> <% } %> <% if (locals.messages.info) { %> <% messages.info.forEach(
+  el => { %>
+  <div class="alert alert-info"><%= el.msg %></div>
+  <% }) %> <% } %>
+  <div class="hero min-h-screen bg-base-200">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+      <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+        <div class="card-body">
+          <form action="/signup" method="POST" class="form-control">
+            <div class="mb-3">
+              <label for="userName" class="label">User Name</label>
+              <input
+                type="text"
+                class="input input-bordered"
+                id="userName"
+                name="userName"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="input input-bordered"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="email"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="password" class="label">Password</label>
+              <input
+                type="password"
+                class="input input-bordered"
+                id="password"
+                name="password"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="confirmPassword" class="label"
+                >Confirm Password</label
+              >
+              <input
+                type="password"
+                class="input input-bordered"
+                id="confirmPassword"
+                name="confirmPassword"
+              />
+            </div>
+            <div class="form-control mt-6">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </form>
         </div>
-    </main>
+      </div>
+    </div>
+  </div>
+</section>
 
 <%- include('partials/footer') -%>
